changes for playlist cpations